修改request传递字符串乱码问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+*.iml
+.idea/
+./vscode
+.ipr
+.iws
+*~
+~*
+*.diff
+*.patch
+*.bak
+.DS_Store
+Thumbs.db
+.svn/
+*.swp
+.nojekyll
+.project
+.settings/
 node_modules/
+_site/
+back/
+Uploads/
+build/
+*.log
