--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "koa-router": "^7.2.0",
         "koa-socket": "^4.4.0",
         "koa-static": "^3.0.0",
+        "request": "^2.81.0",
         "socket.io": "^2.0.1"
     },
     "devDependencies": {
